--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
